--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -32,9 +32,11 @@ jobs:
       - name: Setup feeds
         working-directory: sdk
         run: |
-          # 对齐 feeds 到 release 分支
-          echo "src-git luci https://github.com/openwrt/luci;openwrt-23.05" >> feeds.conf.default
-          echo "src-git packages https://github.com/openwrt/packages;openwrt-23.05" >> feeds.conf.default
+          # 替换已有 luci 和 packages 行，避免重复
+          sed -i 's|src-git luci .*|src-git luci https://github.com/openwrt/luci;openwrt-23.05|' feeds.conf.default
+          sed -i 's|src-git packages .*|src-git packages https://github.com/openwrt/packages;openwrt-23.05|' feeds.conf.default
+
+          # 追加 passwall2 和 pwpackages
           echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2" >> feeds.conf.default
           echo "src-git pwpackages https://github.com/xiaorouji/openwrt-passwall-packages" >> feeds.conf.default
 
