--- a/.config
+++ b/.config
@@ -1,3 +1,7 @@
 echo "CONFIG_PACKAGE_luci-app-passwall2=y" > .config
 echo "CONFIG_PACKAGE_golang=y" >> .config
+echo "CONFIG_PACKAGE_libcap=y" >> .config
+echo "CONFIG_PACKAGE_libcares=y" >> .config
+echo "CONFIG_PACKAGE_libuv=y" >> .config
+echo "CONFIG_PACKAGE_libopenssl=y" >> .config
 make defconfig
