--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -1,11 +1,11 @@
-name: Debug Build passwall2 (mt7621 release)
+name: Debug Build passwall2 (mt7621 release, log-capture)
 
 on:
   workflow_dispatch:
 
 env:
   TZ: Asia/Shanghai
-  TERM: xterm   # 避免 menuconfig 报错
+  TERM: xterm
 
 jobs:
   build:
@@ -33,11 +33,11 @@ jobs:
       - name: Setup feeds
         working-directory: sdk
         run: |
-          # 替换已有 luci 和 packages 行，避免重复
+          # 对齐官方 feeds，避免重复
           sed -i 's|src-git luci .*|src-git luci https://github.com/openwrt/luci;openwrt-23.05|' feeds.conf.default
           sed -i 's|src-git packages .*|src-git packages https://github.com/openwrt/packages;openwrt-23.05|' feeds.conf.default
 
-          # 追加 passwall2 和 pwpackages
+          # 第三方 feeds：passwall2 + packages
           echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2" >> feeds.conf.default
           echo "src-git pwpackages https://github.com/xiaorouji/openwrt-passwall-packages" >> feeds.conf.default
 
@@ -48,16 +48,21 @@ jobs:
       - name: Config packages (non-interactive)
         working-directory: sdk
         run: |
-          echo "CONFIG_PACKAGE_luci-app-passwall2=y" > .config
-          echo "CONFIG_PACKAGE_golang=y" >> .config
+          # 最小化配置：只启用 passwall2 + golang
+          cat > .config << 'EOF'
+          CONFIG_PACKAGE_luci-app-passwall2=y
+          CONFIG_PACKAGE_golang=y
+          EOF
           make defconfig
 
-      - name: Build passwall2 only
+      - name: Build passwall2 only (V=s, -j1, log capture)
         working-directory: sdk
         run: |
-          make package/luci-app-passwall2/compile V=s -j$(nproc)
+          mkdir -p $GITHUB_WORKSPACE/artifacts
+          set -o pipefail
+          make package/luci-app-passwall2/compile V=s -j1 2>&1 | tee $GITHUB_WORKSPACE/artifacts/passwall2_build.log
 
-      - name: Collect artifacts
+      - name: Collect ipk artifacts
         working-directory: sdk
         run: |
           mkdir -p $GITHUB_WORKSPACE/artifacts
@@ -66,5 +71,5 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: passwall2-debug
+          name: passwall2-debug-artifacts
           path: artifacts
