--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -1,16 +1,16 @@
-name: Build passwall2 Packages Only (mt7621)
+name: Build passwall2 for SL3000 (ImmortalWrt 24.10 MT7981)
 
 on:
   workflow_dispatch:
     inputs:
-      openwrt_version:
-        description: 'OpenWrt Version'
+      immortalwrt_version:
+        description: 'ImmortalWrt Version'
         required: true
-        default: '23.05.3'
+        default: '24.10'
         type: choice
         options:
-          - '23.05.3'
-          - '23.05.2'
+          - '24.10'
+          - '23.05'
 
 env:
   TZ: Asia/Shanghai
@@ -19,64 +19,173 @@ env:
 jobs:
   build-packages:
     runs-on: ubuntu-latest
-    timeout-minutes: 45
+    timeout-minutes: 60
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install essential build dependencies
+      - name: Install build dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            build-essential gawk unzip wget git libncurses5-dev \
-            zlib1g-dev libssl-dev python3 python3-distutils rsync file
+            build-essential clang flex g++ gawk gettext git libncurses5-dev \
+            libssl-dev python3-dev python3-full python3-pip python3-setuptools \
+            rsync unzip zlib1g-dev file wget curl ccache cmake ninja-build \
+            libelf-dev patchelf chrpath gawk texinfo diffutils
 
-      - name: Download OpenWrt SDK
+      - name: Download ImmortalWrt SDK for MT7981
         run: |
-          OPENWRT_VERSION="${{ inputs.openwrt_version || '23.05.3' }}"
-          SDK_URL="https://downloads.openwrt.org/releases/${OPENWRT_VERSION}/targets/ramips/mt7621/"
-          SDK_FILE=$(curl -fsSL ${SDK_URL}sha256sums | grep -oE 'openwrt-sdk-[^ ]*Linux-x86_64\.tar\.xz' | head -n1)
-          echo "下载 SDK: ${SDK_FILE}"
-          wget "${SDK_URL}${SDK_FILE}" -O sdk.tar.xz
-          mkdir sdk && tar -xf sdk.tar.xz -C sdk --strip-components=1
-
-      - name: Setup feeds for passwall2
-        working-directory: sdk
-        run: |
-          # 简化 feeds 配置
-          echo "src-git packages https://github.com/openwrt/packages;openwrt-23.05" > feeds.conf.default
-          echo "src-git luci https://github.com/openwrt/luci;openwrt-23.05" >> feeds.conf.default
-          echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2" >> feeds.conf.default
-          echo "src-git pwpackages https://github.com/xiaorouji/openwrt-passwall-packages" >> feeds.conf.default
+          IMMORTALWRT_VERSION="${{ inputs.immortalwrt_version || '24.10' }}"
           
-          # 更新和安装必要的 feeds
-          ./scripts/feeds update packages luci passwall2 pwpackages
-          ./scripts/feeds install -a
+          # 使用 ImmortalWrt 的 SDK
+          if [ "$IMMORTALWRT_VERSION" = "24.10" ]; then
+            SDK_URL="https://downloads.immortalwrt.org/releases/24.10-SNAPSHOT/targets/mediatek/filogic/"
+          else
+            SDK_URL="https://downloads.immortalwrt.org/releases/23.05-SNAPSHOT/targets/mediatek/filogic/"
+          fi
+          
+          echo "下载 ImmortalWrt MT7981 SDK，版本: ${IMMORTALWRT_VERSION}"
+          echo "SDK URL: ${SDK_URL}"
+          
+          # 获取 SDK 文件名
+          SDK_FILE=$(curl -fsSL "${SDK_URL}sha256sums" | grep -oE 'immortalwrt-sdk-[^ ]*Linux-x86_64\.tar\.xz' | head -n1)
+          
+          if [ -z "$SDK_FILE" ]; then
+            echo "❌ 无法找到 ImmortalWrt SDK 文件，尝试 openwrt-sdk"
+            SDK_FILE=$(curl -fsSL "${SDK_URL}sha256sums" | grep -oE 'openwrt-sdk-[^ ]*Linux-x86_64\.tar\.xz' | head -n1)
+          fi
+          
+          if [ -z "$SDK_FILE" ]; then
+            echo "❌ 仍然无法找到 SDK 文件"
+            exit 1
+          fi
+          
+          echo "下载 SDK: ${SDK_FILE}"
+          wget --progress=dot:giga "${SDK_URL}${SDK_FILE}" -O sdk.tar.xz
+          mkdir -p sdk
+          tar -xf sdk.tar.xz -C sdk --strip-components=1
+          echo "IMMORTALWRT_VERSION=${IMMORTALWRT_VERSION}" >> $GITHUB_ENV
 
-      - name: Create minimal package build configuration
+      - name: Setup feeds for ImmortalWrt
         working-directory: sdk
         run: |
-          # 使用上面提供的简化配置
+          # 创建 feeds 配置 - 使用 ImmortalWrt 的源
+          cat > feeds.conf.default << 'EOF'
+          src-git packages https://github.com/immortalwrt/packages;openwrt-24.10
+          src-git luci https://github.com/immortalwrt/luci;openwrt-24.10
+          src-git routing https://github.com/openwrt/routing;openwrt-24.10
+          src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2
+          src-git pwpackages https://github.com/xiaorouji/openwrt-passwall-packages
+          EOF
+
+          echo "=== 更新 feeds ==="
+          ./scripts/feeds update -a
+          
+          echo "=== 安装基础包 ==="
+          ./scripts/feeds install -a -p packages
+          ./scripts/feeds install -a -p luci
+          
+          echo "=== 安装 passwall2 相关包 ==="
+          ./scripts/feeds install -a -p passwall2
+          ./scripts/feeds install -a -p pwpackages
+          
+          # 显式安装关键包
+          ./scripts/feeds install luci-app-passwall2
+          ./scripts/feeds install golang
+          ./scripts/feeds install coreutils-nohup
+
+      - name: Create MT7981 package configuration
+        working-directory: sdk
+        run: |
+          # 创建针对 MT7981 的配置
           cat > .config << 'EOF'
-          CONFIG_TARGET_ramips=y
-          CONFIG_TARGET_ramips_mt7621=y
+          # 目标架构配置 - MT7981
+          CONFIG_TARGET_mediatek=y
+          CONFIG_TARGET_mediatek_filogic=y
+          
+          # 工具链配置
           CONFIG_TOOLCHAIN=y
           CONFIG_PACKAGE_libc=y
           CONFIG_PACKAGE_libgcc=y
           CONFIG_PACKAGE_libstdcpp=y
+          
+          # Golang 环境
           CONFIG_PACKAGE_golang=y
           CONFIG_PACKAGE_golang-src=y
+          
+          # 核心库依赖
           CONFIG_PACKAGE_libopenssl=y
           CONFIG_PACKAGE_libpcre=y
           CONFIG_PACKAGE_zlib=y
+          CONFIG_PACKAGE_libpthread=y
+          CONFIG_PACKAGE_librt=y
+          CONFIG_PACKAGE_libatomic=y
+          
+          # Luci 基础
           CONFIG_PACKAGE_luci-base=y
           CONFIG_PACKAGE_luci-compat=y
-          CONFIG_PACKAGE_luci-app-passwall2=y
-          CONFIG_CCACHE=y
-          EOF
+          CONFIG_PACKAGE_luci-lib-ipkg=y
+          CONFIG_PACKAGE_luci-theme-bootstrap=y
           
+          # 内核模块（网络相关）- MT7981 特定
+          CONFIG_PACKAGE_kmod-nf-conntrack=y
+          CONFIG_PACKAGE_kmod-nf-ipt=y
+          CONFIG_PACKAGE_kmod-nf-nat=y
+          CONFIG_PACKAGE_kmod-ipt-core=y
+          CONFIG_PACKAGE_kmod-tun=y
+          CONFIG_PACKAGE_kmod-crypto-core=y
+          CONFIG_PACKAGE_kmod-crypto-aead=y
+          CONFIG_PACKAGE_kmod-ipt-tproxy=y
+          
+          # 网络工具
+          CONFIG_PACKAGE_iptables=y
+          CONFIG_PACKAGE_iptables-mod-tproxy=y
+          CONFIG_PACKAGE_iptables-mod-extra=y
+          CONFIG_PACKAGE_ip-full=y
+          CONFIG_PACKAGE_resolveip=y
+          
+          # 系统工具
+          CONFIG_PACKAGE_coreutils=y
+          CONFIG_PACKAGE_coreutils-nohup=y
+          CONFIG_PACKAGE_bash=y
+          CONFIG_PACKAGE_ca-bundle=y
+          CONFIG_PACKAGE_ca-certificates=y
+          
+          # Passwall2 主包
+          CONFIG_PACKAGE_luci-app-passwall2=y
+          CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
+          
+          # 编译优化
+          CONFIG_CCACHE=y
+          CONFIG_BUILD_LOG=y
+          EOF
+
+          # 应用配置
+          echo "=== 应用默认配置 ==="
           make defconfig
+          
+          echo "=== 配置摘要 ==="
+          echo "目标架构: mediatek/filogic (MT7981)"
+          echo "启用的包数量: $(grep '^CONFIG_PACKAGE.*=y' .config | wc -l)"
+
+      - name: Build dependencies
+        working-directory: sdk
+        run: |
+          set -e
+          echo "=== 编译工具链和核心依赖 ==="
+          
+          # 编译工具链
+          make toolchain/install -j$(nproc) V=sc
+          
+          # 编译核心库
+          make package/libopenssl/compile package/libpcre/compile package/zlib/compile -j$(nproc) V=sc
+          
+          # 编译 Golang
+          make package/golang/compile -j$(nproc) V=sc
+          
+          # 编译 Luci 基础
+          make package/luci-base/compile package/luci-compat/compile -j$(nproc) V=sc
 
       - name: Build passwall2 package
         working-directory: sdk
@@ -84,34 +193,65 @@ jobs:
           set -e
           mkdir -p $GITHUB_WORKSPACE/artifacts
           
-          echo "=== 开始编译 passwall2 ==="
-          # 直接编译 passwall2，让系统自动处理依赖
-          make package/luci-app-passwall2/compile V=s -j2 2>&1 | tee $GITHUB_WORKSPACE/artifacts/build.log
+          echo "=== 编译 passwall2 主包 ==="
+          # 编译 passwall2
+          make package/luci-app-passwall2/compile -j$(nproc) V=s 2>&1 | tee $GITHUB_WORKSPACE/artifacts/passwall2_build.log || {
+            echo "⚠️ 并行编译失败，尝试单线程编译..."
+            make package/luci-app-passwall2/compile -j1 V=s 2>&1 | tee $GITHUB_WORKSPACE/artifacts/passwall2_build_single.log
+          }
 
-      - name: Collect built packages
+      - name: Collect and verify packages
         working-directory: sdk
         run: |
-          echo "=== 收集编译好的包 ==="
+          set -e
           mkdir -p $GITHUB_WORKSPACE/artifacts/packages
           
-          # 查找所有 ipk 文件
-          find bin -name "*.ipk" -type f | head -20 | while read file; do
-            echo "复制: $(basename $file)"
+          echo "=== 收集编译好的软件包 ==="
+          
+          # 查找所有 IPK 文件
+          find bin -name "*.ipk" -type f | while read file; do
+            filename=$(basename "$file")
+            echo "📦 找到: $filename"
             cp "$file" $GITHUB_WORKSPACE/artifacts/packages/
           done
           
-          echo "=== 包列表 ==="
-          ls -la $GITHUB_WORKSPACE/artifacts/packages/ || echo "没有找到包"
+          echo "=== 包文件统计 ==="
+          ipk_count=$(find $GITHUB_WORKSPACE/artifacts/packages -name "*.ipk" | wc -l)
+          echo "生成的 IPK 包数量: $ipk_count"
+          
+          if [ "$ipk_count" -eq 0 ]; then
+            echo "❌ 没有生成任何软件包"
+            exit 1
+          fi
+          
+          # 列出文件详情
+          ls -la $GITHUB_WORKSPACE/artifacts/packages/
+          echo "PACKAGES_BUILT=true" >> $GITHUB_ENV
 
-      - name: Upload packages
+      - name: Upload packages artifact
+        if: env.PACKAGES_BUILT == 'true'
         uses: actions/upload-artifact@v4
         with:
-          name: passwall2-packages
+          name: passwall2-packages-mt7981-immortalwrt
           path: artifacts/packages/
           retention-days: 30
 
-      - name: Upload build log
+      - name: Upload build logs
         uses: actions/upload-artifact@v4
         with:
-          name: build-log
-          path: artifacts/build.log
+          name: build-logs-mt7981
+          path: artifacts/
+          retention-days: 7
+
+      - name: Build success notification
+        if: success() && env.PACKAGES_BUILT == 'true'
+        run: |
+          echo "🎉 passwall2 软件包编译成功！"
+          echo "架构: ImmortalWrt 24.10 + MT7981"
+          echo "生成的包已上传到 Artifacts"
+
+      - name: Build failure notification
+        if: failure()
+        run: |
+          echo "❌ 编译失败，请检查日志"
+          echo "详细日志已上传到 Artifacts"
